fixed cutoff issue with patient info

--- a/css/patient_info.css
+++ b/css/patient_info.css
@@ -5,7 +5,7 @@ body {
   font-size: 14px;
 }
 .v2285_297 {
-  width: 100%;
+  width: 1536px;
   height: 960px;
   background: linear-gradient(rgba(0,151,184,1), rgba(0,55,68,1));
   opacity: 1;
